<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="gridview.sample.test.lktailor.ContactUs">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearbutton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="false"
            android:background="@color/Buttonunselect"
            android:text="Contact us" />

        <Button
            android:id="@+id/mailing_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textSize="@dimen/_14sdp"
            android:background="@color/Buttonunselect"
            android:text="Mailing Add." />

        <Button
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sdp"
            android:background="@color/ButtonColor"
            android:text="Feedback Form"
            android:textColor="@color/whitecolor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textprag"
        android:layout_below="@id/linearbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="@dimen/_12sdp"
            android:text="@string/textparg"
            android:textColor="#000" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_below="@+id/textprag"
        android:layout_above="@+id/contact_us_submit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:fillViewport="true"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_edittext"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/designback"
                android:hint="@string/firstname"
                android:id="@+id/contact_us_first_name"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="@dimen/_13sdp"
                android:layout_margin="5dp"
                android:textStyle="italic"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/designback"
                android:hint="@string/lastname"
                android:textSize="@dimen/_13sdp"
                android:id="@+id/contact_us_lastname"
                android:layout_margin="5dp"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/designback"
                android:layout_margin="5dp"
                android:hint="@string/address1"
                android:id="@+id/contact_us_address_1"
                android:inputType="text"
                android:textSize="@dimen/_13sdp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/designback"
                android:hint="@string/address2"
                android:inputType="text"
                android:textSize="@dimen/_13sdp"
                android:id="@+id/contact_us_address_2"
                android:layout_margin="5dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/designback"
                android:hint="@string/country"
                android:id="@+id/contact_us_country"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="@dimen/_13sdp"
                android:layout_margin="5dp"
                android:textStyle="italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/designback"
                android:hint="@string/company"
                android:id="@+id/contact_us_company"
                android:textSize="@dimen/_13sdp"
                android:layout_margin="5dp"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/designback"
                android:hint="@string/email"
                android:id="@+id/contact_us_email"
                android:layout_margin="5dp"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="@dimen/_13sdp"
                android:textStyle="italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/designback"
                android:hint="@string/phone"
                android:visibility="visible"
                android:id="@+id/contact_us_phone"
                android:inputType="phone"
                android:maxLength="10"
                android:textSize="@dimen/_13sdp"
                android:layout_margin="5dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/designback"
                android:hint="@string/fax"
                android:id="@+id/contact_us_fax"
                android:layout_margin="5dp"
                android:inputType="text"
                android:visibility="visible"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="@dimen/_13sdp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:visibility="visible"
                android:id="@+id/contact_us_tv"
                android:text="Customer Type:"
                android:textStyle="italic"
                android:textSize="@dimen/_14sdp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="visible"
                android:id="@+id/contact_us_radio_grp"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/new_customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/radio_color"
                    android:checked="true"
                    android:textSize="@dimen/_13sdp"
                    android:text="New Customer"
                    android:textColor="@color/text_color" />

                <RadioButton
                    android:id="@+id/existing_customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_13sdp"
                    android:buttonTint="@color/radio_color"
                    android:text="Existing Customer"
                    android:textColor="@color/text_color" />

            </RadioGroup>

            <EditText
                android:id="@+id/contact_us_comment_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/designback"
                android:gravity="top|left"
                android:hint="@string/comment"
                android:lines="2"
                android:visibility="visible"
                android:maxLines="10"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:scrollbars="vertical"
                android:textSize="@dimen/_13sdp"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:id="@+id/contact_us_submit"
        android:background="@color/ButtonColor"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textSize="@dimen/_18sdp"
        android:textStyle="italic" />

    </RelativeLayout>
</FrameLayout>
