<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="gridview.sample.test.lktailor.Style_File">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sdp"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="WARDROBE ESSENTIALS FOR MEN"
        android:textColor="#B70101"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/style1"
                android:paddingTop="5dp"
                android:adjustViewBounds="true"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/style_file_para1"
                android:layout_weight="0.9"
                android:textSize="@dimen/_14sdp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:breakStrategy="balanced"
                />
        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/style_file_para2"
                android:textSize="@dimen/_14sdp"
                android:padding="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="5dp"
                android:breakStrategy="balanced"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/style1"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/style_file_para3"
                android:layout_weight="0.9"
                android:textSize="@dimen/_14sdp"
                android:paddingLeft="5dp"
                />
        </LinearLayout>
        </LinearLayout>

    </ScrollView>
</FrameLayout>
