<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="gridview.sample.test.lktailor.How_to_measurement">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/filter_button"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/text_background"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="01"
                            android:textColor="@color/whitecolor"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="2dp"
                            android:layout_weight="0.2"
                            android:background="@color/header_background"
                            android:gravity="center_vertical"
                            android:padding="10dp"
                            android:text="NECK"
                            android:textColor="@color/nf_title_black"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:weightSum="2"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1.1"
                            android:src="@drawable/howto1"
                            android:adjustViewBounds="true"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:padding="@dimen/_12sdp"
                            android:text="@string/text01"
                            android:textSize="@dimen/_14sdp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_01"
                    android:layout_margin="10dp"
                    android:background="@drawable/filter_button"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/text_background"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="02"
                            android:textColor="@color/whitecolor"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="2dp"
                            android:layout_weight="0.2"
                            android:background="@color/header_background"
                            android:gravity="center_vertical"
                            android:padding="10dp"
                            android:text="CHEST"
                            android:textColor="@color/nf_title_black"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="2">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.1"
                            android:layout_margin="8dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/howto2" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:gravity="left"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/text02"
                            android:textSize="@dimen/_14sdp" />


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_01"
                    android:layout_margin="10dp"
                    android:background="@drawable/filter_button"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/text_background"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="03"
                            android:textColor="@color/whitecolor"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="2dp"
                            android:layout_weight="0.2"
                            android:background="@color/header_background"
                            android:padding="10dp"
                            android:text="STOMACH"
                            android:textColor="@color/nf_title_black"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.1"
                            android:adjustViewBounds="true"
                            android:layout_margin="8dp"
                            android:src="@drawable/howto2" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/text03"
                            android:textSize="@dimen/_14sdp" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>
